--- a/.github/workflows/wf_response_compress_test.yaml
+++ b/.github/workflows/wf_response_compress_test.yaml
@@ -2,11 +2,9 @@ name: Response Compress Pack Test
 
 on:
   push:
-    branches:
-      - master
+    branches: [ "main" ]
   pull_request:
-    branches:
-      - master
+    branches: [ "main" ]
 
 jobs:
   build:
